# ProjectDC

./: Dockerfile  LICENSE  README.md  main.py  payment_report_2024-05-12_21-49-48.csv  payment_report_for_vehicle_2.csv  payment_report_for_vehicle_4.csv  pyproject.toml
migrations/: env.py
migrations/versions/: 63b24c8805a2_delete_adress_and_phone_fields.py  6c5ef3826d6d_new_field.py  9c1ba45586e1_models.py  a09d9ecd9fe4_init.py  aa2af37572ad_change_data_fields.py  ca49db3707f9_password.py
src/conf/: config.py
src/entity/: models.py
src/notebook/: license-plate-recognition-using-cnn.ipynb
src/repository/: payments.py  users.py  vehicles.py
src/routes/: auth_routes.py  user_routes.py  vehicles_routes.py
src/schemas/: user_schemas.py  vehicles_schemas.py
src/services/: auth_service.py  role_service.py
templates/: index.html
